/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package eventmesh.workflow.api.protocol;

option java_multiple_files = true;
option java_package="org.apache.eventmesh.common.protocol.workflow.protos";
option java_outer_classname = "EventmeshWorkflowGrpc";

option go_package = "github.com/apache/incubator-eventmesh/eventmesh-workflow-go/api/proto";

service Workflow {
    rpc Execute (ExecuteRequest) returns (ExecuteResponse) {}
}

message ExecuteRequest {
	string id = 1;
	string instance_id = 2;
	string task_instance_id = 3;
	string input = 4;
}

message ExecuteResponse {
	string instance_id = 1;
}
